# tox-interpreters

./: .coveragerc  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml
src/tox_interpreters/: __init__.py  hooks.py
tests/: conftest.py  test_hooks.py  test_selector.py
