[bdist_wheel]
universal = 1

[metadata]
name = tox-interpreters
version = 0.0.1

[options]
install_requires =
    tox>=3.8.0,<4.0.0
package_dir =
    =src
packages = find:
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
tox =
    interpreters = tox_interpreters.hooks

[flake8]
max-line-length = 79
no-accept-encodings = True

[pydocstyle]
convention = pep257

[tool:pytest]
addopts = -ra
filterwarnings = once
testpaths = tests
