[metadata]
name = tox-interpreters
version = 0.1.0
description = Customize Python interpreters used to create tox testenvs
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Fabio Sangiovanni
author_email = sjh+github@sanjioh.org
url = https://github.com/sanjioh/tox-interpreters
classifiers =
    Development Status :: 3 - Alpha
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing

[options]
install_requires =
    tox>=3.8.0,<4.0.0
package_dir =
    =src
packages = find:
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
tox =
    interpreters = tox_interpreters.hooks

[flake8]
max-line-length = 79
no-accept-encodings = True

[pydocstyle]
convention = pep257

[tool:pytest]
addopts = -ra
filterwarnings = once
testpaths = tests
